chore: suppress VCS check for test release runs
Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Reject any VCS dependencies
       shell: python
+      continue-on-error: ${{ github.ref_type == 'branch' }}
       run: |
         import re, tomllib
         manifest = tomllib.load(open('pyproject.toml', 'rb'))
