chore: log the bash vesrion for the tests
Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
       fail-fast: false
 
     steps:
+    - name: Bash version
+      run: bash --version
+
     - name: Checkout code
       uses: actions/checkout@v4
 
