chore: pull in the reusable test.yml changes
Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,20 @@ name: test
 
 on:
   push:
-    branches-ignore: [deploy]
+    branches-ignore: [release-test-*]
   pull_request:
     branches: [master]
+  workflow_call:
+    inputs:
+      release-artifact-id:
+        required: false
+        type: string
+        default: ''
+        description: The artifact-id to run the tests against.
+      disable-format-check:
+        type: string
+        default: ''
+        description: Disable ruff linting and ruff check if it is a non empty value
 
 jobs:
   test:
@@ -36,7 +47,9 @@ jobs:
       run: bash --version
 
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: pkgcore/gh-actions/get-source@main
+      with:
+        artifact-id: ${{ inputs.release-artifact-id }}
 
     # experimental targets generally lack lxml wheels
     - name: Install libxml2 and libxslt development packages
@@ -89,6 +102,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    if: inputs.disable-format-check == ''
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -108,6 +122,7 @@ jobs:
 
   format:
     runs-on: ubuntu-latest
+    if: inputs.disable-format-check == ''
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
